--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -3,7 +3,7 @@
 
 
 
-  <string name="app_name">ExamHacks</string>
+  <string name="app_name">TestTricks</string>
   <string name="dev_activity_name">Exponent Dev</string>
   <string name="preference_file_key">host.exp.exponent.SharedPreferences</string>
   <string name="error_header">Something went wrong.</string>
